src/miniaudio_bridge.h

MA_BRIDGE_EXPORT void ma_bridge_node_hpf_set_cutoff(void* node_handle, float cutoffFrequency);
// Node Graph Wiring
MA_BRIDGE_EXPORT void ma_bridge_node_attach_output_bus(void* node_handle, int outputBusIndex, void* dest_node_handle, int destInputBusIndex);
// Node Management
MA_BRIDGE_EXPORT void ma_bridge_node_uninit(void* node_handle);
// Routing
/**
 * Route a Sound to a specific Node (instead of the Engine's master output).
 * @param sound_handle The sound to reroute.
 * @param node_handle The effect node to connect to. If NULL, connects to Engine Output.
 */
MA_BRIDGE_EXPORT void ma_bridge_sound_route_to_node(void* sound_handle, void* node_handle);
MA_BRIDGE_EXPORT void ma_bridge_deinit(void);