lib/miniaudio_ffi_bindings_generated.dart


  late final _ma_bridge_node_hpf_set_cutoffPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_node_hpf_set_cutoff');
  late final _ma_bridge_node_hpf_set_cutoff = _ma_bridge_node_hpf_set_cutoffPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  /// Node Management
  void ma_bridge_node_uninit(
    ffi.Pointer<ffi.Void> node_handle,
  ) {
    return _ma_bridge_node_uninit(
      node_handle,
    );
  }

  late final _ma_bridge_node_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_node_uninit');
  late final _ma_bridge_node_uninit = _ma_bridge_node_uninitPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Routing
  /// /**
  ///  * Route a Sound to a specific Node (instead of the Engine's master output).
  ///  * @param sound_handle The sound to reroute.
  ///  * @param node_handle The effect node to connect to. If NULL, connects to Engine Output.
  ///  */
  void ma_bridge_sound_route_to_node(
    ffi.Pointer<ffi.Void> sound_handle,
    ffi.Pointer<ffi.Void> node_handle,
  ) {
    return _ma_bridge_sound_route_to_node(
      sound_handle,
      node_handle,
    );
  }

  late final _ma_bridge_sound_route_to_nodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>)>>('ma_bridge_sound_route_to_node');
  late final _ma_bridge_sound_route_to_node =
      _ma_bridge_sound_route_to_nodePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  /// Chain nodes: Node A output -> Node B input.
  /// @param source_node The upstream node.
  /// @param dest_node The downstream node. If NULL, connects to Engine Output.
  void ma_bridge_node_attach_output_bus(
    ffi.Pointer<ffi.Void> source_node,
    int source_bus,
    ffi.Pointer<ffi.Void> dest_node,
    int dest_bus,
  ) {
    return _ma_bridge_node_attach_output_bus(
      source_node,
      source_bus,
      dest_node,
      dest_bus,
    );
  }

  late final _ma_bridge_node_attach_output_busPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Int32,
              ffi.Pointer<ffi.Void>,
              ffi.Int32)>>('ma_bridge_node_attach_output_bus');
  late final _ma_bridge_node_attach_output_bus =
      _ma_bridge_node_attach_output_busPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Void>, int)>();

  void ma_bridge_deinit() {
    return _ma_bridge_deinit();
  }

  late final _ma_bridge_deinitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('ma_bridge_deinit');
  late final _ma_bridge_deinit =
      _ma_bridge_deinitPtr.asFunction<void Function()>();
}
